# nextsimdg

./: .gitignore  .pre-commit  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  README.md  _arg_v_8cpp.html  _arg_v_8cpp__incl.map  _arg_v_8cpp__incl.md5  _arg_v_8cpp_source.html  _arg_v_8hpp.html  _arg_v_8hpp.js  _arg_v_8hpp__dep__incl.map  _arg_v_8hpp__dep__incl.md5  _arg_v_8hpp__incl.map  _arg_v_8hpp__incl.md5  _arg_v_8hpp_source.html  _chrono_8hpp.html  _chrono_8hpp.js  _chrono_8hpp__dep__incl.map  _chrono_8hpp__dep__incl.md5  _chrono_8hpp__incl.map  _chrono_8hpp__incl.md5  _chrono_8hpp_source.html  _command_line_parser_8cpp.html  _command_line_parser_8cpp__incl.map  _command_line_parser_8cpp__incl.md5  _command_line_parser_8cpp_source.html  _command_line_parser_8hpp.html  _command_line_parser_8hpp.js  _command_line_parser_8hpp__dep__incl.map  _command_line_parser_8hpp__dep__incl.md5  _command_line_parser_8hpp__incl.map  _command_line_parser_8hpp__incl.md5  _command_line_parser_8hpp_source.html  _command_line_parser__test_8cpp.html  _command_line_parser__test_8cpp__incl.map  _command_line_parser__test_8cpp__incl.md5  _command_line_parser__test_8cpp_source.html  _common_restart_metadata_8cpp.html  (+1740 more)
core/src/: BaseElementData.cpp  CMakeLists.txt  CommandLineParser.cpp  CommonRestartMetadata.cpp  ConfigurationHelp.cpp  ConfigurationHelpPrinter.cpp  Configurator.cpp  ConfiguredModule.cpp  DevGrid.cpp  DevGridIO.cpp  DevIterant.cpp  DevStep.cpp  ElementData.cpp  ExternalData.cpp  FileCallbackCloser.cpp  Finalizer.cpp  Iterator.cpp  Logged.cpp  MissingData.cpp  Model.cpp  ModelArray.cpp  ModelComponent.cpp  ModelConfig.cpp  ModelData.cpp  ModelMetadata.cpp  ModelModule.cpp  ModuleLoader.cpp  NZLevels.cpp  NetcdfMetadataConfiguration.cpp  NoCoupler.cpp  OasisCoupler.cpp  OasisData.cpp  PDWriter.cpp  ParaGridIO.cpp  ParaGridIO_Xios.cpp  ParallelNetcdfFile.cpp  PrognosticData.cpp  PrognosticElementData.cpp  PrognosticGenerator.cpp  RectGridIO.cpp  (+7 more)
core/test/: ArgV.cpp  CMakeLists.txt  CommandLineParser_test.cpp  ConfigOutput_test.cpp  Configurator_test.cpp  ConfiguredModule_test.cpp  DevGrid_example.cpp  DevGrid_test.cpp  DevIterant_test.cpp  DevStep_test.cpp  DynamicsAdvection_test.cpp  DynamicsModuleForPDtest.cpp  ElementData_test.cpp  EnumWrapper_test.cpp  FakeSmeshData.cpp  FileCallbackCloser_test.cpp  Finalizer_test.cpp  Iterator_test.cpp  Logged_example.cpp  MPI_example_tests.cpp  MainMPI.cpp  ModelArrayRef3_test.cpp  ModelArrayRefDebug_test.cpp  ModelArrayRef_test.cpp  ModelArray_test.cpp  ModelComponent_test.cpp  ModelData_test.cpp  ModelModule_test.cpp  ModuleLoader_test.cpp  MonthlyCubicBSpline_test.cpp  NewModelArrayRef_test.cpp  ParaGridIO_input_test.nc  ParaGridIO_input_test.py  ParaGrid_test.cpp  PrognosticDataIO_test.cpp  PrognosticData_test.cpp  PrognosticElementData_test.cpp  RectGrid_test.cpp  ScopedTimer_test.cpp  SimpleIterant_test.cpp  (+29 more)
dynamics/: CMakeLists.txt  dgtransport.cpp
dynamics/ParametricMesh/: createdistortedboxmesh.py  createdistortedrectanglemesh.py  netcdf2dynamics.py  netcdf2dynamics2.py  netcdf2dynamics2tcs.old.py  readme.txt
dynamics/SasipMesh/: createdistortedboxmesh.py  createdistortedrectanglemesh.py  distortedrectangle.smesh
dynamics/applications/: CMakeLists.txt  NextsimMevp.cpp  README.md  benchmark.cpp  benchmark_MEB_CGvel.cpp  benchmark_box_mevp.cpp  benchmark_box_sasip_mevp.cpp  benchmark_cartesian_globe.cpp  benchmark_compression_sasip_meb.cpp  benchmark_data.hpp  benchmark_freedrift_meb.cpp  benchmark_freedrift_mevp.cpp  benchmark_mMEB.cpp  benchmark_mehlmann_mevp.cpp  benchmark_mehlmann_orcamesh_mevp.cpp  benchmark_mehlmann_orcamesh_mevp_spherical.cpp  benchmark_mehlmann_sasip_meb.cpp  benchmark_mehlmann_sasip_mevp.cpp  benchmark_spherical_globe.cpp  compression_MEB_CGvel.cpp  compression_Vero_MEB_CGvel.cpp  createNextsimMeshData.cpp  evp.cpp  test_spherical_globe.cpp
dynamics/codegeneration/: basisfunctions.py  basisfunctions_gausspoints.py  codeGenerationCGToDG.py  codeGenerationCGinGauss.py  codeGenerationDGinGauss.py  codeGenerationParametricMesh.py  dgbasisfunctions.py  gaussquadrature.py  project_cg_dg.py  run.sh
dynamics/examples/: CMakeLists.txt  README.md  example1.cpp  example2a.cpp  example2b.cpp  example2c.cpp  multithreading_rectangle2.cpp
dynamics/include/: dgbasisfunctions_gausspoints.hpp  dginitial.hpp  dgtimestepping.hpp  dgtransport.hpp  dgvector.hpp  dgvector_manipulations.hpp  dgvisu.hpp  mesh.hpp  timemesh.hpp
dynamics/src/: CGDynamicsKernel.cpp  CMakeLists.txt  DGNetcdf.cpp  DGTransport.cpp  DummyDynamicsKernel.cpp  Dynamics.cpp  DynamicsKernel.cpp  Interpolations.cpp  MEVPDynamicsKernel.cpp  MEVPStressUpdateStep.cpp  ParametricMap.cpp  ParametricMesh.cpp  ParametricTools.cpp  SasipMesh.cpp  SphericalTools.cpp  SphericalTransport.cpp  VectorManipulations.cpp  cgParametricMomentum.cpp  cgmomentum.cpp  (+7 more)
src/: .clang-format  BaseElementData.cpp  BasicIceOceanHeatFlux.cpp  CCSMIceAlbedo.cpp  CMakeLists.txt  CommandLineParser.cpp  Configurator.cpp  Configured.cpp  ConfiguredModule.cpp  CountTimer.cpp  ElementData.cpp  ExternalData.cpp  HiblerConcentration.cpp  Iterator.cpp  LocalTimer.cpp  Logged.cpp  Model.cpp  ModuleLoader.cpp  NextsimPhysics.cpp  Physics1dBase.cpp  PhysicsData.cpp  PrognosticData.cpp  SMU2IceAlbedo.cpp  SMUIceAlbedo.cpp  ScopedTimer.cpp  SimpleIterant.cpp  ThermoIce0.cpp  Timed.cpp  Timer.cpp  main.cpp
test/: ArgV.cpp  ArgV.hpp  BaseElementData_test.cpp  BenchmarkIntegration_test.py  CMakeLists.txt  CommandLineParser_test.cpp  Configurator_test.cpp  ConfiguredModule_test.cpp  EnumWrapper_test.cpp  ExternalData_test.cpp  Iterator_test.cpp  LocalTimer_test.cpp  Logged_test.cpp  Model_test.cpp  ModuleLoader_test.cpp  NextsimPhysics_test.cpp  PhysicsData_test.cpp  ScopedTimer_test.cpp  SimpleIterant_test.cpp  ThermoIce0_test.cpp  ThermoIntegration.cfg  ThermoIntegration_test.py  Timed_test.cpp  Timer_test.cpp  config_simple_example.cfg  config_simple_example_with_outdir.cfg  config_simple_example_with_outdir_no_slash.cfg  make_init_column.py  simple_config_integration_test.cpp  testClasses.hpp
(+977 files in other folders)
